namespace CheckersGame.Enumeration;

public enum PieceColor
{
    Blue,
    Red
}