namespace CheckersGame.Enumeration;

public enum GameStatus
{
    NotReady,
    Ready,
    OnGoing,
    GameOver
}