namespace CheckersGame.Enumeration;

public enum PieceStatus
{
    Regular,
    King
}