namespace CheckersGame.Interface;

public interface IPlayer
{
    public string NickName { get; }
    public int Id { get; }
}